# cryptis

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  Makefile  README.md  _CoqProject  attacker.v  attacker_types.v  basic.v  challenge_response.v  coGset.v  coGset_disj.v  comp_map.v  composite_game.v  conn.v  cryptis.v  crypto.v  crypto1.v  dh.v  dh_auth.v  dune  dune-project  example_stats.sh  flake.nix  gen_RocqProject.sh  gmeta.v  guarded.v  iso_dh.v  lib.v  make-package  mathcomp_compat.v  nown.v  nsl.v  nsl_dh.v  nsl_dh_game.v  pk_auth.v  pk_dh.v  pk_dh_game.v  pre_term.v  (+18 more)
.github/workflows/: nix-github-actions.yml
config/: flags  paths  source-list
conn/: impl.v  proofs.v  props.v
core/: comp_map.v  minted.v  phase.v  pre_term.v  public.v  saved_prop.v  term.v  term_meta.v
core/pre_term/: base.v  with_stdpp.v
core/term/: base.v  with_stdpp.v
cryptis/: adequacy.v  claims.v  composite_game.v  cryptis.v  dh.v  dune  lib.v  mathcomp_compat.v  primitives.v  role.v  session.v  summary.v  tls13.v
cryptis/conn/: impl.v  proofs.v  props.v
cryptis/core/: comp_map.v  minted.v  phase.v  pre_term.v  public.v  term.v  term_meta.v
cryptis/iso_dh/: game.v
cryptis/lib/: adequacy.v  dh.v  gen_adequacy.v  gmeta.v  list.v  list_match.v  mathcomp_compat.v  mathcomp_utils.v  nown.v  replica.v  repr.v  saved_prop.v  session.v  size_rec_pred.v  term_set.v
cryptis/pk_auth/: client_proofs.v  dh.v  dh_game.v  nsl.v  (+1 more)
dh_auth/: initiator.v  responder.v  shared.v
examples/: alist.v  challenge_response.v  composite_game.v  conn.v  counter.v  dune  gen_conn.v  iso_dh.v  nsl.v  nsl_auth.v  nsl_dh.v  nsl_secr.v  opaque.v  permanent.v  rpc.v  sess.v  store.v  tls13.v
iso_dh/: game.v  initiator.v  responder.v  shared.v
lib/: term_set.v
pk_auth/: client_proofs.v  impl.v  server_proofs.v  shared.v
primitives/: attacker.v  comp.v  notations.v  simple.v  with_cryptis.v
rpc/: impl.v  proofs.v  props.v
store/: alist.v  client_proofs.v  connection_proofs.v  db.v  db_proofs.v  game.v  impl.v  server_proofs.v  shared.v
summary/: summary.v
(+103 files in other folders)
